# chartGpt

./: .gitignore  README.md  pyproject.toml
src/: dependency.py  main.py
src/aws/: secret_manager.py
src/utils/: get_all_models.py
